--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ title: Welcome
     <h2>
       <li><a class="page-link" href="/ECN101_F2016/">ECN 101 - Intermediate Macro Theory (Fall 2016)</a></li>
       <li><a class="page-link" href="/misc/latex/">Basic LaTeX Guide</a></li>
+      <li><a class="page-link" href="/about/">About Me</a></li>
     </h2>
   </ul>
 </div>
