--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@ title: Welcome
 <div class="home">
   <ul type="disc">
     <h2>
+      <li><a class="page-link" href="/ECN1B_Summer2017/">ECN 1B - Principles of Macro (Summer 2017)</a></li>
       <li><a class="page-link" href="/ECN1B_S2017/">ECN 1B - Principles of Macro (Spring 2017)</a></li>
       <li><a class="page-link" href="/ECN1B_W2017/">ECN 1B - Principles of Macro (Winter 2017)</a></li>
-      <li><a class="page-link" href="/ECN101_F2016/">ECN 101 - Intermediate Macro Theory (Fall 2016)</a></li>
+      <li><a class="page-link" href="/ECN101_F2016/">ECN 101 - Intermediate Macro (Fall 2016)</a></li>
       <li><a class="page-link" href="/misc/latex/">Basic LaTeX Guide</a></li>
       <li><a class="page-link" href="/about/">About Me</a></li>
     </h2>
