--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@ title: Welcome
 <div class="home">
   <ul type="disc">
     <h2>
-      <li><a class="page-link" href="/ECN1B_Summer2017/">ECN 1B - Principles of Macro (Summer 2017)</a></li>
-      <li><a class="page-link" href="/ECN1B_S2017/">ECN 1B - Principles of Macro (Spring 2017)</a></li>
-      <li><a class="page-link" href="/ECN1B_W2017/">ECN 1B - Principles of Macro (Winter 2017)</a></li>
-      <li><a class="page-link" href="/ECN101_F2016/">ECN 101B - Intermediate Macro (Fall 2016)</a></li>
+      <li><a class="page-link" href="/courses/2017F_ECN1B/">ECN 1B - Principles of Macro (Fall 2017)</a></li>
+      <li><a class="page-link" href="/courses/2017Su_ECN1B/">ECN 1B - Principles of Macro (Summer 2017)</a></li>
+      <li><a class="page-link" href="/courses/2017Sp_ECN1B/">ECN 1B - Principles of Macro (Spring 2017)</a></li>
+      <li><a class="page-link" href="/courses/2017W_ECN1B/">ECN 1B - Principles of Macro (Winter 2017)</a></li>
+      <li><a class="page-link" href="/courses/2016F_ECN101/">ECN 101B - Intermediate Macro (Fall 2016)</a></li>
       <li><a class="page-link" href="/mynotes/">Miscellaneous First Year Notes</a></li>
       <li><a class="page-link" href="/misc/latex/">Basic LaTeX Guide</a></li>
       <li><a class="page-link" href="/about/">About Me</a></li>
