--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 ---
 layout: default
 title: Welcome
+exclude: true
 ---
-* ##[ECN 1B - Principles of Macro (Summer 2017)](2017Su_ECN1B/)
-* ##[ECN 1B - Principles of Macro (Spring 2017)](2017Sp_ECN1B/)
-* ##[ECN 1B - Principles of Macro (Winter 2017)](2017W_ECN1B/)
-* ##[ECN 101B - Intermediate Macro (Fall 2016)](2016F_ECN101/)
+<div class="home">
+  <ul type="disc">
+    <h2>
+      <li><a class="page-link" href="/courses/2017F_ECN1B/">ECN 1B - Principles of Macro (Fall 2017)</a></li>
+      <li><a class="page-link" href="/courses/old/">Old Courses</a></li>
+      <li><a class="page-link" href="/mynotes/">Miscellaneous First Year Notes</a></li>
+      <li><a class="page-link" href="/misc/latex/">Basic LaTeX Guide</a></li>
+      <li><a class="page-link" href="/about/">About Me</a></li>
+    </h2>
+  </ul>
+</div>
