--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ exclude: true
 <div class="home">
   <ul type="disc">
     <h2>
+      <li><a class="page-link" href="/courses/2018W_ECN102/">ECN 102 - Analysis of Econ Data (Winter 2018)</a></li>
       <li><a class="page-link" href="/courses/2017F_ECN1B/">ECN 1B - Principles of Macro (Fall 2017)</a></li>
       <li><a class="page-link" href="/courses/old/">Old Courses</a></li>
       <li><a class="page-link" href="/misc/latex/">Basic LaTeX Guide</a></li>
