--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ exclude: true
 <div class="home">
   <ul type="disc">
     <h2>
-      <li><a class="page-link" href="/courses/2018S_ECN134/">ECN 134 - Financial Economics (Spring 2018)</a></li>
+      <li><a class="page-link" href="/courses/2018Sp_ECN134/">ECN 134 - Financial Economics (Spring 2018)</a></li>
       <li><a class="page-link" href="/courses/old/">Old Courses</a></li>
       <li><a class="page-link" href="/misc/latex/">Basic LaTeX Guide</a></li>
       <li><a class="page-link" href="/about/">About Me</a></li>
