--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ exclude: true
     <h2>
       <li><a class="page-link" href="/courses/2018Su_ECN1B/">ECN 1B - Principles of Macro (Summer 2018)</a></li>
       <li><a class="page-link" href="/courses/old/">Old Courses</a></li>
+      <li><a class="page-link" href="/misc/latex/">LaTeX Starter Guide</a></li>
       <li><a class="page-link" href="/misc/humility/">Shrine to Humility</a></li>
-      <li><a class="page-link" href="/misc/latex/">Basic LaTeX Guide</a></li>
       <li><a class="page-link" href="/about/">About Me</a></li>
     </h2>
   </ul>
