--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ exclude: true
 <div class="home">
   <ul type="disc">
     <h2>
+      <li><a class="page-link" href="/">BW 1A - Principles of Basket Weaving (Fall 2018)</a></li>
       <li><a class="page-link" href="/courses/old/">Old Courses</a></li>
       <li><a class="page-link" href="/misc/latex/">LaTeX Starter Guide</a></li>
       <li><a class="page-link" href="/misc/humility/">Shrine to Humility</a></li>
