--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ exclude: true
     <h2>
       <li><a class="page-link" href="/courses/2018F_ECN101/">ECN 101 - Intermediate Macro (Fall 2018)</a></li>
       <li><a class="page-link" href="/courses/old/">Old Courses</a></li>
+      <li><a class="page-link" href="/misc/latexeditor/">LaTeX Editor</a></li>
       <li><a class="page-link" href="/misc/latex/">LaTeX Starter Guide</a></li>
       <li><a class="page-link" href="/misc/humility/">Shrine to Humility</a></li>
       <li><a class="page-link" href="/about/">About Me</a></li>
