--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ exclude: true
   <ul type="disc">
     <h2>
       <li><a class="page-link" href="/courses/2018F_ECN102/">ECN 102 - Analysis of Econ Data (Fall 2018)</a></li>
-      <li><a class="page-link" href="/courses/old/">Old Courses</a></li>
+      <li><a class="page-link" href="/courses/old/">Old Courses and Materials</a></li>
       <li><a class="page-link" href="/misc/latexeditor/">LaTeX Editor</a></li>
       <li><a class="page-link" href="/misc/latex/">LaTeX Starter Guide</a></li>
       <li><a class="page-link" href="/misc/humility/">Shrine to Humility</a></li>
