--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ exclude: true
     <h2>
       <li><a class="page-link" href="/courses/2019W_ECN122/">ECN 122 - Game Theory (Winter 2019)</a></li>
       <li><a class="page-link" href="/courses/old/">Old Courses and Materials</a></li>
-      <li><a class="page-link" href="/misc/fedperformance/">Federal Reserve Performance</a></li>
+      <li><a class="page-link" href="/fedperformance/">Federal Reserve Performance</a></li>
       <li><a class="page-link" href="/misc/latexeditor/">LaTeX Editor</a></li>
       <li><a class="page-link" href="/misc/latex/">LaTeX Starter Guide</a></li>
       <li><a class="page-link" href="/misc/humility/">Shrine to Humility</a></li>
