--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ exclude: true
 <div class="home">
   <ul type="disc">
     <h2>
-      <li><a class="page-link" href="/courses/2019S_ECN102/">ECN 102 - Analysis of Econ Data (Spring 2019)</a></li>
+      <li><a class="page-link" href="/courses/2019Sp_ECN102/">ECN 102 - Analysis of Econ Data (Spring 2019)</a></li>
       <li><a class="page-link" href="/courses/old/">Old Courses and Materials</a></li>
       <li><a class="page-link" href="/misc/latexeditor/">LaTeX Editor</a></li>
       <li><a class="page-link" href="/misc/latex/">LaTeX Starter Guide</a></li>
