--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ exclude: true
 <div class="home">
   <ul type="disc">
     <h2>
-      <li><a class="page-link" href="/courses/2019Su_ECN1B/">ECN 1B - Principles of Macro (Summer 2019)</a></li>
+      <li><a class="page-link" href="https://youtu.be/Dp0Bt2cbcc8">GTS 203 - Advanced Goat Debate</a></li>
       <li><a class="page-link" href="/courses/old/">Old Courses and Materials</a></li>
       <li><a class="page-link" href="/misc/latexeditor/">LaTeX Editor</a></li>
       <li><a class="page-link" href="/misc/latex/">LaTeX Starter Guide</a></li>
