--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@ layout: default
 title: Welcome
 exclude: true
 ---
+
+Stalkers who want me to TA a certain course next quarter can feel free to email me,
+I will try my best to get it. I am open to any suggestions other than ECN1A and ECN100.
+
 <div class="home">
   <ul type="disc">
     <h2>
