--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@ title: Welcome
 exclude: true
 ---
 
-Stalkers who want me to TA a certain course next quarter can feel free to email me,
-I will try my best to get it. I am open to any suggestions other than ECN1A and ECN100.
+Attention stalkers: if you want me to TA a certain course next quarter, then
+feel free to email me, I will try my best to get it. I am open to any
+suggestions other than ECN1A and ECN100.
 
 <div class="home">
   <ul type="disc">
