--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ exclude: true
 ---
 
 Attention stalkers: if you want me to TA a certain course next quarter, then
-feel free to email me, I will try my best to get it. I am open to any
+feel free to email me by Tuesday, I will try my best to get it. I am open to any
 suggestions other than ECN1A and ECN100.
 
 <div class="home">
