--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ exclude: true
     <h2>
       <li><a class="page-link" href="/courses/2019F_ECN1B/">ECN 1B - Principles of Macro (Fall 2019)</a></li>
       <li><a class="page-link" href="/courses/old/">Old Courses and Materials</a></li>
+      <li><a class="page-link" href="/code/">Miscellaneous Code</a></li>
       <li><a class="page-link" href="/misc/latexeditor/">LaTeX Editor</a></li>
       <li><a class="page-link" href="/misc/latex/">LaTeX Starter Guide</a></li>
       <li><a class="page-link" href="/misc/humility/">Shrine to Humility</a></li>
