--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ exclude: true
 <div class="home">
   <ul type="disc">
     <h2>
-      <li><a class="page-link" href="/courses/2020W_ECN160B/">ECN 160B - International Macro (Winter 2020)</a></li>
+      <li><a class="page-link" href="/courses/2020S_ECN102/">ECN 160B - International Macro (Winter 2020)</a></li>
       <li><a class="page-link" href="/courses/old/">Old Courses and Materials</a></li>
       <li><a class="page-link" href="/code/">Miscellaneous Code</a></li>
       <li><a class="page-link" href="/misc/latexeditor/">LaTeX Editor</a></li>
