--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ exclude: true
 <div class="home">
   <ul type="disc">
     <h2>
-      <li><a class="page-link" href="/courses/2020F_ECN121B/">Industrial Organization (Fall 2020)</a></li>
+      <li><a class="page-link" href="/courses/2020F_ECN121B/">ECN 121B - Industrial Organization (Fall 2020)</a></li>
       <li><a class="page-link" href="/courses/old/">Old Courses and Materials</a></li>
       <li><a class="page-link" href="/code/">Miscellaneous Code</a></li>
       <li><a class="page-link" href="/misc/humility/">Shrine to Humility</a></li>
