spring quarter 2021, booooooo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ exclude: true
 <div class="home">
   <ul type="disc">
     <h2>
-      <li><a class="page-link" href="/courses/2021W_ECN106/">ECN 106 - Decision Making (Winter 2021)</a></li>
+      <li><a class="page-link" href="/courses/2021Sp_ECN103/">ECN 103 - Uncertainty & Information (Spring 2021)</a></li>
       <li><a class="page-link" href="/courses/old/">Old Courses and Materials</a></li>
       <li><a class="page-link" href="/code/">Miscellaneous Code</a></li>
       <li><a class="page-link" href="/misc/humility/">Shrine to Humility</a></li>
