--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ exclude: true
   <ul type="disc">
     <h2>
       <li><a class="page-link" href="/courses/2022W_ECN103/">Uncertainty & Information (Winter 2022)</a></li>
+      <li><a class="page-link" href="/research/">Research</a></li>
       <li><a class="page-link" href="/courses/old/">Old Courses and Materials</a></li>
       <li><a class="page-link" href="/code/">Miscellaneous Code</a></li>
       <li><a class="page-link" href="/misc/humility/">Shrine to Humility</a></li>
