--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ exclude: true
       <li><a class="page-link" href="/courses/old/">Old Courses and Materials</a></li>
       <li><a class="page-link" href="/code/">Miscellaneous Code</a></li>
       <li><a class="page-link" href="/misc/humility/">Shrine to Humility</a></li>
+      <li><a class="page-link" href="/misc/heterodoxy/">Shrine to Heterodoxy</a></li>
       <li><a class="page-link" href="/about/">About Me</a></li>
     </h2>
   </ul>
